chore: TCDICORE-163 fix extra space between tabbed posts and content in mobile

--- a/ui/src/scss/themes/default/_tabbed.scss
+++ b/ui/src/scss/themes/default/_tabbed.scss
@@ -24,6 +24,12 @@
   }
 }
 
+@media screen and (max-width: 767px) {
+  .viz.tabbed.posts.container {
+    min-height: unset;
+  } 
+}
+
 
 .ui.grid.tabbed.posts {
   background-color: transparent !important;
